Add TestFx dependency.